# minimum_wage

./: .gitignore  Dockerfile  README.md  log.dvc  mlruns.dvc  model.dvc  plot.dvc  pyproject.toml  read_lock.R
.dvc/: config
config/: main.yaml
config/model/: xgb.yaml  xgboost.yaml
data/processed/: .gitignore  data_v1.dta.dvc  data_v2.csv.dvc  data_v2.dta.dvc  training.dta.dvc
dockerfile/: Dockerfile
mlruns/0/: meta.yaml
notebooks/: ml_workflow.ipynb
script/: git_push.sh  jupyter.sh  mlflow.sh  mlflow_ui.sh  train.sh  tty.sh
src/data/: data_partition.do  data_partition_v1.do  data_partition_v2.do
src/data/archive/: 0_set_path.do  1_data_partition.do  2_ml.do
src/model/: basemodel.py  boost.R  dataset.py  en.R  ml_tidymodel.R  predict.py  utils.R
src/model/R/: en.R
src/model/archive/: stats.R
src/model/archive_R/: ml.R
src/model/py/: basemodel.py  dataset.py  predict.py  utils.py  xgb.py
